k8s/beta.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: factorbook-beta-app-deployment
  labels:
    app: factorbook-beta-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: factorbook-beta-app
  template:
    metadata:
      labels:
        app: factorbook-beta-app
    spec:
      containers:
      - name: factorbook-beta-app
        image: gcr.io/devenv-215523/factorbook-app:v0.5.3
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: factorbook-beta-app-service
  labels:
    app: factorbook-beta-app
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: factorbook-beta-app
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: factorbook-beta-app-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "factorbook-beta-staging-external-ip"
    kubernetes.io/ingress.allow-http: "true"
    networking.gke.io/managed-certificates: "factorbook-beta-cert"
spec:
  backend:
    serviceName: factorbook-beta-app-service
    servicePort: 80
