k8s/staging.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: variant-app-deployment
  labels:
    app: variant-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: variant-app
  template:
    metadata:
      labels:
        app: variant-app
    spec:
      containers:
      - name: variant-app
        image: gcr.io/devenv-215523/variant-app
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: variant-app-service
  labels:
    app: variant-app
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: variant-app
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: variant-app-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "variant-staging-external-ip"
    kubernetes.io/ingress.allow-http: "true"
    networking.gke.io/managed-certificates: "variant-staging-cert"
spec:
  backend:
    serviceName: variant-app-service
    servicePort: 80
